<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C7FAD"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPersonName"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/portfolio_title"
        android:textSize="25sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttoncolor"
        android:text="@string/popular_movies"/>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttoncolor"
        android:text="@string/stock_hawk"/>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttoncolor"
        android:text="@string/build_it_bigger"/>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttoncolor"
        android:text="@string/make_your_app_material"/>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttoncolor"
        android:text="@string/go_ubiquitous"/>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttoncolor"
        android:text="@string/capstone_my_own_app"/>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1"/>

</LinearLayout>

